--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="contactanos.html">Contactanos</a>
+                        <a class="nav-link" href="contactanos.html">contactanos</a>
                       </li>
                     </ul>
                   </div>
