--- a/nosotros.html
+++ b/nosotros.html
@@ -22,7 +22,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mx-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="Inicio.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">index</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="nosotros.html">Nosotros</a>
@@ -38,7 +38,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="Contactanos.html">Contactanos</a>
+                        <a class="nav-link" href="contactanos.html">Contactanos</a>
                       </li>
                     </ul>
                   </div>
