--- a/servicios.html
+++ b/servicios.html
@@ -39,7 +39,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Contactanos.html">Contactanos</a>
+                    <a class="nav-link" href="contactanos.html">Contactanos</a>
                   </li>
                 </ul>
               </div>
